# password-gen

./: Cargo.toml  chars.txt  main.rs
src/: main.rs
src/generator/: mod.rs  pseudo.rs  randomorg.rs
