[package]
name = "rust-password-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
base64 = "0.13"
hex = "0.4"
serde_json = "1.0"
rand = "0.8.4"
zxcvbn = "2"
# ring = "0.16"
